src/objects/WineNote__c.object
<CustomObject>
    <fields>
        <fullName>Acidity__c</fullName>
        <label>Acidity</label>
        <picklist>
            <picklistValues>
                <fullName>Tart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smooth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flabby</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AromaIntensity__c</fullName>
        <label>Aroma Intensity</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aromatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powerful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aromas__c</fullName>
        <label>Aromas</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unbalanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <picklist>
            <picklistValues>
                <fullName>Very Light</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-Bodied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clarity__c</fullName>
        <label>Clarity</label>
        <picklist>
            <picklistValues>
                <fullName>Clear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slight Haze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloudy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ColorDepth__c</fullName>
        <label>Color Depth</label>
        <picklist>
            <picklistValues>
                <fullName>Watery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ColorHue__c</fullName>
        <label>Color Hue</label>
        <picklist>
            <controllingField>Color__c</controllingField>
            <picklistValues>
                <fullName>Greenish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Straw Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purplish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garnet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salmon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copper</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rose</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conclusion__c</fullName>
        <label>Conclusion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Development__c</fullName>
        <label>Development</label>
        <picklist>
            <picklistValues>
                <fullName>Youthful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some Age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DrySweet__c</fullName>
        <label>Dry/Sweet</label>
        <picklist>
            <picklistValues>
                <fullName>Bone Dry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Dry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Sweet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Sweet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finish__c</fullName>
        <label>Finish</label>
        <picklist>
            <picklistValues>
                <fullName>Short (&lt; 3 sec)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium (4-5 sec)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long (5-7 sec)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Long (&gt; 8 sec)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FlavorIntensity__c</fullName>
        <label>Flavor Intensity</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flavorful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powerful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flavors__c</fullName>
        <label>Flavors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FoodPairingMatch__c</fullName>
        <label>Food Pairing Match</label>
        <picklist>
            <picklistValues>
                <fullName>Perfect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FoodPairing__c</fullName>
        <label>Food Pairing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Style__c</fullName>
        <label>Style</label>
        <picklist>
            <picklistValues>
                <fullName>Traditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Between</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modern</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TanninLevel__c</fullName>
        <label>Tannin Level</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TanninType__c</fullName>
        <label>Tannin Type</label>
        <picklist>
            <picklistValues>
                <fullName>Soft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TastingDate__c</fullName>
        <label>Tasting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TastingLocation__c</fullName>
        <label>Tasting Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TastingPartners__c</fullName>
        <label>Tasting Partner(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UnbalancedExcess__c</fullName>
        <label>Unbalanced Excess</label>
        <picklist>
            <controllingField>Balance__c</controllingField>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tannin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sugar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wine__c</fullName>
        <label>Wine</label>
        <referenceTo>Wine__c</referenceTo>
        <relationshipLabel>Wine Notes</relationshipLabel>
        <relationshipName>Wine_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Wine Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Note-{00000}</displayFormat>
        <label>Note ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wine Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>